--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,7 +6,7 @@
         <div class="container navbar-container">
           <!-- Brand/Logo -->
           <a class="navbar-brand" href="../../index.html">
-            <%= image_tag asset_path("logo/logo-1-a.png"), class:"", alt:"Open Air" %>
+            <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), class:"mb-3", height:"40px", alt:"Open Air" %>
           </a>
           <!-- HAMBURGER MENU (WHEN COLLAPSED <-> SMALL SCREEN) -->
           <div class="d-inline-block">
