--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,7 +4,7 @@
     <head>
     </head>
     <body>
-        <section class="slice sct-color-1">
+        <section class="bg-base-5 slice sct-color-1">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-6">
