modif edit user view

--- a/app/views/devise/registrations/_edit_registration_form_fields.html.erb
+++ b/app/views/devise/registrations/_edit_registration_form_fields.html.erb
@@ -1,91 +1,80 @@
-
-
-
-<div class="col-md-5 mx-auto my-4">
-    <div class="card p-5">
-        <div class="card-title px-4">
-            <h3 class="heading heading-5 strong-500">
-                Mon profil
-            </h3>
-        </div>
-    
-                    <div class="col-12">
-                        <div class="form-group">
-                            <%= f.label :Prénom %><br />
-                            <div class="input-group input-group--style-1">
-                                <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
+<section class="slice-lg has-bg-cover bg-size-cover">
+    <div id="top" class="container">
+        <div class="row justify-content-center cols-xs-space">
+            <div class="col-lg-8">
+                <div class="form-card form-card--style-2 z-depth-2-top">
+                    <div class="form-header text-center">
+                        <div class="form-header-icon">
+                            <i class="icon ion-log-in"></i>
+                        </div>
+                    </div>
+                    <div class="form-body">
+                        <div class="text-center px-2">
+                            <h4 class="heading heading-4 strong-400 mb-4">Editer mon compte</h4>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :Prénom %><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", class: "form-control form-control-lg", placeholder: "Prénom" %>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                                                        
-                                                        
-                                                        
-                    <div class="col-12">
-                    <div class="form-group">
-                        <%= f.label :Nom %><br />
-                        <div class="input-group input-group--style-1">
-                                <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
+                        
+                        
+                        
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :Nom %><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", class: "form-control form-control-lg", placeholder: "Nom" %>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                                                    
-
-
-                                                        
-        <div class="col-12">
-            <div class="form-group">
-                <%= f.label :adresse %><br />
-                <div class="input-group input-group--style-1">
-                    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adress" %>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="col-12">
-            <div class="form-group">
-                <%= f.label :email %><br />
-                <div class="input-group input-group--style-1">
-                    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-12">
-            <div class="form-group">
-                <%= f.label :Mot_de_passe_actuel %><small class="font-italic"> (Obligatoire pour modifier vos données)</small><br />
-                <div class="input-group input-group--style-1">
-                    <%= f.password_field :current_password, autofocus: true, autocomplete: "current_password", class: "form-control form-control-lg", placeholder: "Mot de passe actuel" %>
-                </div>
-            </div>
-        </div>
-
-                                                        
-        <div class="col-12">
-            <div class="form-group">
-                    <%= f.label :Nouveau_mot_de_passe %>
-                    <% if @minimum_password_length %>
-                    <small class="font-italic">(<%= @minimum_password_length %> caractères minimum)</small>
-                    <% end %><br />
-                <div class="input-group input-group--style-1">
-                    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Nouveau mot de passe" %>
-                </div>
-            </div>
-        </div>
-    
-
-        <div class="col-12">
-            <div class="form-group">
-                <%= f.label :Confirmer_le_mot_de_passe %><br />
-                <div class="input-group input-group--style-1">
-                    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirmer le mot de passe" %>
-                </div>
-            </div>
-        </div>
-
-    <div class="row py-4">
-        <div class="col-12">
-            
-        <%= render "devise/shared/links" %>
-        </div>
-    </div>
+                        
+                        
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :adresse %><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.text_field :address, autofocus: true, autocomplete: "adress", class: "form-control form-control-lg", placeholder: "Adress" %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :email %><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :Mot_de_passe_actuel %><small class="font-italic"> (Obligatoire pour modifier vos données)</small><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.password_field :current_password, autofocus: true, autocomplete: "current_password", class: "form-control form-control-lg", placeholder: "Mot de passe actuel" %>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :Nouveau_mot_de_passe %>
+                                <% if @minimum_password_length %>
+                                <small class="font-italic">(<%= @minimum_password_length %> caractères minimum)</small>
+                                <% end %><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Nouveau mot de passe" %>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <div class="col-12">
+                            <div class="form-group">
+                                <%= f.label :Confirmer_le_mot_de_passe %><br />
+                                <div class="input-group input-group--style-1">
+                                    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: "Confirmer le mot de passe" %>
+                                </div>
+                            </div>
+                        </div>
