--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
       <nav class="navbar navbar-expand-lg  navbar-opaque navbar- bg-light ">
         <div class="container navbar-container">
           <!-- Brand/Logo -->
-          <a class="navbar-brand" href="../../index.html">
+          <a class="navbar-brand" href="<%= root_path %>">
             <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), class:"mb-3", height:"40px", alt:"Open Air" %>
           </a>
           <!-- HAMBURGER MENU (WHEN COLLAPSED <-> SMALL SCREEN) -->
