--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -26,7 +26,9 @@
                                 </div>
                                 <div class="card-body h-25">
                                     <h3 class="heading heading-5 strong-600 mb-0">
-                                        <a href="/topics/<%=topic.id%>"><%=topic.title%></a>
+                                        <%= link_to topic_path(topic) do %>
+                                        <%=topic.title%>
+                                        <% end %>
                                     </h3>
                                 </div>
                                 <div class="card-footer">
@@ -35,7 +37,9 @@
                                             <div class="block-author">
                                                 <div class="author-info">
                                                     <div class="author-name">
-                                                        <a href="/topics/<%=topic.id%>"><%=topic.short_description%></a>
+                                                        <%= link_to topic_path(topic) do %>
+                                                        <%=topic.short_description%>
+                                                        <% end %>
                                                     </div>
                                                 </div>
                                             </div>
