--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,9 +5,9 @@
       <nav class="navbar navbar-expand-lg  navbar-opaque navbar- bg-light ">
         <div class="container navbar-container">
           <!-- Brand/Logo -->
-          <a class="navbar-brand" href="<%= root_path %>">
-            <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), class:"mb-3", height:"40px", alt:"Open Air" %>
-          </a>
+          <%= link_to root_path do %>
+          <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), class:"mb-3", height:"40px", alt:"Open Air" %>
+          <% end %>
           <!-- HAMBURGER MENU (WHEN COLLAPSED <-> SMALL SCREEN) -->
           <div class="d-inline-block">
             <!-- Navbar toggler  -->
