fix:change logo in reset pswd link

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -8,7 +8,7 @@
                     <div class="card form-card form-card--style-2">
                         <div class="form-header text-center">
                             <div class="form-header-icon">
-                                <i class="icon ion-log-in"></i>
+                                <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %>
                             </div>
                         </div>
                         <div class="form-body">
