--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -1,3 +1,153 @@
 // Place all the styles related to the topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$toggler-size: 40px;
+$toggler-color: #000;
+$toggler-transition: transform .5s, top .5s;
+
+$item-count: 5;
+$item-size: $toggler-size * 4;
+$item-color: #000;
+$item-transition: .5s;
+
+@mixin size ($width, $height: $width) {
+  width: $width;
+  height: $height;
+}
+
+@mixin fixed-center {
+  position: fixed;
+  display: block;
+  top: 0;
+  bottom: 35%;
+  right: 0;
+  left: 60%;
+  margin: auto;
+}
+
+@mixin line {
+  @include size($toggler-size, $toggler-size/8);
+  display: block;
+  z-index: 2;
+  border-radius: $toggler-size/16;
+  background: rgba($toggler-color, 0.7);
+  transition: $toggler-transition;
+}
+
+// styles
+
+body {
+  //overflow: hidden;
+  background: linear-gradient(to right, #fc354c, #0abfbc);
+}
+
+.menu-toggler {
+  @include fixed-center;
+  @include size($toggler-size);
+  z-index: 2;
+  opacity: 0;
+  cursor: pointer;
+  
+  &:hover + label,
+  &:hover + label:before,
+  &:hover + label:after {
+    background: $toggler-color;
+  }
+}
+
+.menu-toggler:checked {
+  & + label {
+    background: transparent;
+  }
+  
+  & + label:before,
+  & + label:after {
+    top: 0;
+    width: $toggler-size;
+    transform-origin: 50% 50%;
+  }
+  
+  & + label:before {
+    transform: rotate(45deg);
+  }
+  
+  & + label:after {
+    transform: rotate(-45deg);
+  }
+}
+
+.menu-toggler:checked ~ ul {
+  .menu-item {
+    opacity: 1;
+  }
+
+  @for $i from 0 through $item-count - 1 {
+    .menu-item:nth-child(#{$i + 1}) {
+      transform: rotate(360deg / $item-count * $i) translateX(-$item-size - 30px);
+    }
+  }
+ 
+  .menu-item a {
+    pointer-events: auto;
+		font-size : 1.4em;
+  }
+}
+
+.menu-toggler + label {
+  @include line;
+  @include fixed-center;
+  
+  &:before,
+  &:after {
+    @include line;
+    content: "";
+    position: absolute;
+    left: 0;
+  }
+  
+  &:before {
+    top: $toggler-size/4;
+  }
+  
+  &:after {
+    top: -$toggler-size/4;
+  }
+}
+
+@for $i from 0 through $item-count - 1 {
+  .menu-item:nth-child(#{$i + 1}) a {
+    transform: rotate(-360deg / $item-count * $i);
+  }
+}
+
+.menu-item {
+  @include fixed-center;
+  @include size($item-size);
+  display: block;
+  opacity: 0;
+  transition: $item-transition;
+}
+
+.menu-item a {
+	border: 1px solid black;
+  display: block;
+  width: inherit;
+  height: inherit;
+  line-height: $item-size;
+  color: rgba($item-color, 0.7);
+  background: rgba(white, 0.2);
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  font-size: $item-size/2;
+  pointer-events: none;
+  transition: .2s;
+  
+  &:hover {
+    box-shadow: 0 0 0 $item-size/40 rgba(white, 0.3);
+    color: $item-color;
+    background: rgba(white, 0.3);
+    font-size: $item-size/1.8;
+  }
+}
