--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -41,7 +41,7 @@
                    
                     <br><br>
 
-                    <div class="section-title section-title--style-1 text-center mb-4">
+                    <div id= "pressure"  class="section-title section-title--style-1 text-center mb-4">
                         <h3 class="section-title-inner heading-3 strong-400">
                             <span> <%=@topic.pressure_section_title%> </span>
                         </h3>
@@ -121,9 +121,31 @@
 
             </div>
             
+			<div class="col-lg-3">
+				<nav class="menu" id="myScrollspy">
+      <input checked="checked" class="menu-toggler" id="menu-toggler" type="checkbox"></input>
+      <label for="menu-toggler"></label>
+      <ul>
+        <li class="menu-item">
+          <%= link_to topic_path(@topic, anchor: "driver") do %><small>DRIVERS</small><%end%>
+        </li>
+        <li class="menu-item">
+          <%= link_to topic_path(@topic, anchor: "pressure") do %><small>PRESSURE</small></a><%end%>
+        </li>
+        <li class="menu-item">
+          <%= link_to topic_path(@topic, anchor: "state") do %><small>STATE</small></a><%end%>
+        </li>
+        <li class="menu-item">
+          <%= link_to topic_path(@topic, anchor: "impact") do %><small>IMPACT</small></a><%end%>
+        </li>
+        <li class="menu-item">
+          <%= link_to topic_path(@topic, anchor: "response") do %><small>RESPONSE</small></a><%end%>
+        </li>
+      </ul>
+    </nav>
+			</div>
         </div>       
-
-
+	
     </div>
                                 
                                             
