feat: generate random reading time

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -48,7 +48,7 @@
                                     <div class="col text-right">
                                         <ul class="inline-links inline-links--style-2">
                                             <li>
-                                                10 min read
+                                                Temps de lecture: <%= Random.rand(5..30) %> min
                                             </li>
                                         </ul>
                                     </div> 
