feat - implement sticky sidebar menu in topic#show. scrollspy not active yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 
   </head>
-  <body >
+  <body data-spy="scroll" data-target="#scroll_data_target" data-offset="50">
     <!-- MAIN WRAPPER -->
     <div class="body-wrap">
       <div id="st-container" class="st-container">
