--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,16 +4,44 @@
             <div class="col-md-12">
                 <div class="section-title section-title--style-1 text-center mb-4">
                     <h3 class="section-title-inner heading-2 text-normal">
-                        Open Air
+                        Open data
                     </h3>
                     <span class="section-title-delimiter clearfix d-none"></span>
                 </div>
 
                 <div class="fluid-paragraph fluid-paragraph-sm text-center">
                     <p class="text-lg line-height-1_8 c-gray-light">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                        quisque adipiscing lobortis aptent cras et justo.
+                        La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige toutes collectivités
+                        exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open
+                        data »).
+                        L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès à ces données, de
+                        manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces
+                        données.
+                    </p>
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title section-title--style-1 text-center mb-4">
+                    <h3 class="section-title-inner heading-2 text-normal">
+                        Open data
+                    </h3>
+                    <span class="section-title-delimiter clearfix d-none"></span>
+                </div>
+
+                <div class="fluid-paragraph fluid-paragraph-sm text-center">
+                    <p class="text-lg line-height-1_8 c-gray-light">
+                        La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige toutes collectivités
+                        exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open
+                        data »).
+                        L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès à ces données, de
+                        manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces
+                        données.
+                        <hr>
                     </p>
                 </div>
             </div>
