feat - justify text and center image in topic#show

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,11 +13,13 @@
         <div class="row">
             <div class="col-lg-9">
                 <div class="block block-post">
-                    <div class="block-image">
-                        <%= image_tag @topic.main_picture, class: "rounded" %>
+                    <div class="container-fluid">
+                        <div class="text-center">
+                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        </div>
                     </div>
                     <div class="block-body block-post-body">
-                        <p>
+                        <p class="text-justify">
                             <%=@topic.short_description%>
                         </p>
                     </div>
@@ -30,13 +32,15 @@
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
                     <div class="block-body block-post-body">
-                        <p>
+                        <p class="text-justify">
                             <%=@topic.driver_section_intro%>
                         </p>
                     </div>
                     <br>
-                    <div class="block-image">
-                        <%= image_tag @topic.main_picture, class: "rounded" %>
+                    <div class="container-fluid">
+                        <div class="text-center">
+                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        </div>
                     </div>
                     <br><br>
                     <div id="pressure_section" class="section-title section-title--style-1 text-center mb-4">
@@ -47,13 +51,15 @@
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
                     <div class="block-body block-post-body">
-                        <p>
+                        <p class="text-justify">
                             <%=@topic.pressure_section_intro%>
                         </p>
                     </div>
                     <br>
-                    <div class="block-image">
-                        <%= image_tag @topic.main_picture, class: "rounded" %>
+                    <div class="container-fluid">
+                        <div class="text-center">
+                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        </div>
                     </div>
                     <br><br>
                     <div id="state_section" class="section-title section-title--style-1 text-center mb-4">
@@ -64,13 +70,15 @@
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
                     <div class="block-body block-post-body">
-                        <p>
+                        <p class="text-justify">
                             <%=@topic.state_section_intro%>
                         </p>
                     </div>
                     <br>
-                    <div class="block-image">
-                        <%= image_tag @topic.main_picture, class: "rounded" %>
+                    <div class="container-fluid">
+                        <div class="text-center">
+                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        </div>
                     </div>
                     <br><br>
                     <div id="impact_section" class="section-title section-title--style-1 text-center mb-4">
@@ -81,13 +89,15 @@
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
                     <div class="block-body block-post-body">
-                        <p>
+                        <p class="text-justify">
                             <%=@topic.impact_section_intro%>
                         </p>
                     </div>
                     <br>
-                    <div class="block-image">
-                        <%= image_tag @topic.main_picture, class: "rounded" %>
+                    <div class="container-fluid">
+                        <div class="text-center">
+                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        </div>
                     </div>
                     <br><br>
                     <div id="response_section" class="section-title section-title--style-1 text-center mb-4">
@@ -98,13 +108,15 @@
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
                     <div class="block-body block-post-body">
-                        <p>
+                        <p class="text-justify">
                             <%=@topic.response_section_intro%>
                         </p>
                     </div>
                     <br>
-                    <div class="block-image">
-                        <%= image_tag @topic.main_picture, class: "rounded" %>
+                    <div class="container-fluid">
+                        <div class="text-center">
+                        <%= image_tag @topic.main_picture, class: "img-responsive rounded" %>
+                        </div>
                     </div>
                     <br>
                 </div>
