fix: replace bad host names by "open-air-sud.herokuapp.com"

--- a/app/views/user_mailer/bye_email.txt.erb
+++ b/app/views/user_mailer/bye_email.txt.erb
@@ -1,11 +1,11 @@
   
   Bonjour <%= @user.full_name %> 
 ===================================================================================
-      Cet e-mail confirme que vous avez suprimé votre compte OpenAir.
+      Cet e-mail confirme que vous avez suprimé votre compte Open Air.
    
-      Si vous avez reçu cet e-mail par erreur, merci de l'ignorer.
+      Si vous l'avez reçu par erreur, merci de l'ignorer.
     
     
     
-     À très vite sur openair.fr !
+     À très vite sur open-air-sud.herokuapp.com !
  
