--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -4,14 +4,14 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Bonjour <%= @user.full_name %> et bienvenue dans la communauté OpenAir</h1>
+    <h1>Bonjour <%= @user.full_name %> et bienvenue dans la communauté Open Air.</h1>
     <p>
-      Votre compte OpenAir a bien été créé. 
+      Votre compte Open Air a bien été créé. 
       Merci de votre inscription et bienvenue parmi nous.
     </p>
     <p>
       Ceci est un message automatique, merci de ne pas y répondre.<br>
     </p>
-    <p> À très vite sur openair.fr !</p>
+    <p> À très vite sur open-air-sud.herokuapp.com !</p>
   </body>
 </html>
