--- a/app/views/user_mailer/welcome_email.txt.erb
+++ b/app/views/user_mailer/welcome_email.txt.erb
@@ -1,9 +1,9 @@
-Bonjour <%= @user.full_name %> et bienvenue dans la communauté OpenAir !
+Bonjour <%= @user.full_name %> et bienvenue dans la communauté Open Air .
 ==========================================================
  
 
-Votre compte OpenAir a bien été créé. 
+Votre compte Open Air a bien été créé. 
 Merci de votre inscription et bienvenue parmi nous.
-Ceci est un message automaique, merci de ne pas y répondre.
+Ceci est un message automatique, merci de ne pas y répondre.
 
-À très vite sur openair.fr !
+À très vite sur open-air-sud.herokuapp.com !
