--- a/app/views/user_mailer/bye_email.html.erb
+++ b/app/views/user_mailer/bye_email.html.erb
@@ -8,12 +8,12 @@
     <h1>Bonjour <%= @user.full_name %> </h1>
     
     <p>
-    Cet e-mail confirme que vous avez suprimé votre compte OpenAir.
+    Cet e-mail confirme que vous avez suprimé votre compte Open Air.
    
-    Si vous avez reçu cet e-mail par erreur, merci de l'ignorer.
+    Si vous l'avez reçu par erreur, merci de l'ignorer.
     </p>
     
     
-    <p> À très vite sur openair.fr !</p>
+    <p> À très vite sur open-air-sud.herokuapp.com !</p>
   </body>
 </html>
