--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,1 +1,13 @@
-oidfjldiwufvhbkdjvuhjdsnlkvjhbsvd
+<div class="container">
+<ul>
+
+       <% @user.each_with_index do |user, index| %>
+       <li class="list-group-item d-flex justify-content-between align-items-center">
+          Nom: <%= user.last_name %> <br> 
+          Prénom: <%= user.first_name %> 
+          <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :class => 'delete_user' %>
+<% end %>
+</li>
+</ul>
+
+</div>
