fix methode destroy

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,7 +5,7 @@
        <li class="list-group-item d-flex justify-content-between align-items-center">
           Nom: <%= user.last_name %> <br> 
           Prénom: <%= user.first_name %> 
-          <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :class => 'delete_user' %>
+          <%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :class => 'delete_user' %>
 <% end %>
 </li>
 </ul>
