--- a/app/views/admin/users/destroy.js.erb
+++ b/app/views/admin/users/destroy.js.erb
@@ -1,3 +1,1 @@
-$('.delete_user').bind('ajax:success', function() {  
-        $(this).closest('tr').fadeOut();
-});  
+$("li#<%= @user_id %>").remove();
