--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,21 +3,18 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title section-title--style-1 text-center mb-4">
-                    <h3 class="section-title-inner heading-2 text-normal">
-                        Open data
+                    <h3 class="section-title-inner heading-2 strong-400">
+                        <span>Open data</span>
                     </h3>
-                    <span class="section-title-delimiter clearfix d-none"></span>
+                    <span class="section-title-delimiter clearfix"></span>
                 </div>
 
-                <div class="fluid-paragraph fluid-paragraph-sm text-center">
-                    <p class="text-lg line-height-1_8 c-gray-light">
-                        La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige toutes collectivités
-                        exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open
-                        data »).
-                        L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès à ces données, de
-                        manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces
-                        données.
-                    </p>
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-4">
+                    La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige toutes collectivités
+                    exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open data
+                    »).
+                    L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès à ces données, de
+                    manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces données.
                     <hr>
                 </div>
             </div>
@@ -27,22 +24,39 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title section-title--style-1 text-center mb-4">
-                    <h3 class="section-title-inner heading-2 text-normal">
-                        Open data
+                    <h3 class="section-title-inner heading-2 strong-400">
+                        <span>Pollution de l’air à Aix-Marseille</span>
                     </h3>
-                    <span class="section-title-delimiter clearfix d-none"></span>
+                    <span class="section-title-delimiter clearfix"></span>
                 </div>
 
-                <div class="fluid-paragraph fluid-paragraph-sm text-center">
-                    <p class="text-lg line-height-1_8 c-gray-light">
-                        La Loi pour une République Numérique «Lemaire» (7 octobre 2016) oblige toutes collectivités
-                        exerçant une mission de service public d’ouvrir et de partager leurs données publiques (« open
-                        data »).
-                        L'entrée en vigueur devait être en 2018. Le challenge est de rendre l'accès à ces données, de
-                        manière exploitable, c'est-à-dire centré sur un usage, facilité voire immédiat de ces
-                        données.
-                        <hr>
-                    </p>
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center mb-4">
+                    Aix-Marseille est la 2nde métropôle de France avec 1.83 millions d’habitants. Elle est touchée par
+                    une forte pollution (activités industrielles (terminal portuaire de Fos) et fort trafic routier).
+                    En 2016, 71 000 personnes sont toujours exposées à des teneurs supérieures aux valeurs limites
+                    d’oxydes d’azotes sur le territoire de la métropole. Lorsqu’on s’attache aux recommandations OMS,
+                    plus contraignantes, 71 % de la population est concernée par au moins un dépassement des teneurs en
+                    NOx ou en PM10.
+                    <hr>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="section-title section-title--style-1 text-center mb-4">
+                    <h3 class="section-title-inner heading-2 strong-400">
+                        <span>Lab in the AIR</span>
+                    </h3>
+                    <span class="section-title-delimiter clearfix"></span>
+                </div>
+
+                <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center">
+                    « a LAB in the AIR » est un atelier digital ouvert qui permet le développement et la
+                    production « sur mesure » d’objets, biens et services grâce à la mise en place de
+                    processus de prototypage rapide et l’engagement des utilisateurs à travers la
+                    co-création de solutions. Sa thématique est les grandes politiques de l’air et du climat.
                 </div>
             </div>
         </div>
