feat: mano written admin namespace

--- a/app/views/admin/topics/index.html.erb
+++ b/app/views/admin/topics/index.html.erb
@@ -1,1 +1,12 @@
-j,nbcghjkbhj:nbv
+<div class="container">
+<ul>
+
+       <% @topics.each_with_index do |topic, index| %>
+       <li class="list-group-item d-flex justify-content-between align-items-center">
+          Titre: <%= topic.title %> <br> 
+          <%= link_to 'Destroy', admin_topic_path(topic), method: :delete %>
+<% end %>
+</li>
+</ul>
+<%= link_to "Ajouter un article", new_admin_topic_path, class: "btn btn-styled btn-teal-blue offset-5" %> 
+</div>
