--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <ul>
 
-       <% @user.each_with_index do |user, index| %>
+       <% @users.each_with_index do |user, index| %>
        <li class="list-group-item d-flex justify-content-between align-items-center">
           Nom: <%= user.last_name %> <br> 
           Prénom: <%= user.first_name %> 
