--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,69 +1,62 @@
-
-<!-- MAIN WRAPPER -->
-<div class="body-wrap">
-    <section class="slice sct-color-2">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-4">
-                    <div class="card form-card form-card--style-2">
-                        <div class="form-header text-center">
-                            <div class="form-header-icon">
-                                <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %>
-                            </div>
-                        </div>
-                        <div class="form-body">
-                            <div class="text-center px-2">
-                                <h4 class="heading heading-4 strong-400 mb-4">Changez votre mot de passe</h4>
-                            </div>
-
-                            <form class="form-default" role="form">
-                                <div class="row">
-                                    <div class="col-12">
-                                      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-                                      <%= render "devise/shared/error_messages", resource: resource %>
-                                      <%= f.hidden_field :reset_password_token %>
-                                        <div class="form-group">
-                                            <%= f.label :password, "Nouveau mot de passe" %><br />
-                                            <% if @minimum_password_length %>
-                                              <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-                                            <% end %>
-                                            <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="form-group has-feedback">
-                                            <%= f.label :password_confirmation, "Confirmer mot de passe" %><br />
-                                            <%= f.password_field :password_confirmation, autocomplete: "off" %>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                
-                                  <%= f.submit "Sauvegarder", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
-                              
-                        </div>
-                    </div>
-                    <% end %>
-                    <!-- Form auxiliary links -->
-                    <div class="form-user-footer-links pt-2">
-                        <div class="row">
-                            <div class="col-6">
-                                <%= render "devise/shared/links" %>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </div>
+<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+<%= render "devise/shared/error_messages", resource: resource %>
+<%= f.hidden_field :reset_password_token %>
+<section class="slice-lg has-bg-cover bg-size-cover">
+  <div id="top" class="container">
+    <div class="row justify-content-center cols-xs-space">
+      <div class="col-lg-6">
+        <div class="form-card form-card--style-2 z-depth-2-top">
+          <div class="form-header text-center">
+            <div>
+              <%= image_tag asset_path("air-quality-logo/logo-1-a.svg"), height:"60px", alt:"Open Air" %><br>
+              <br>
             </div>
+            <div class="form-header-icon">
+              <i class="icon ion-log-in"></i>
+            </div>
+          </div>
+          <div class="form-body">
+            <div class="section-title section-title--style-2 text-center mb-2">
+              <h4 class="section-title-inner heading-2 strong-400 text-dark">
+              <span>Changer son mot de passe</span>
+              </h4>
+            </div>
+            <form class="form-default" role="form">
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                    <%= f.label :password, "Nouveau mot de passe" %><br />
+                                            <% if @minimum_password_length %>
+                                              <em>(<%= @minimum_password_length %> caractères minimum)</em><br />
+                                            <% end %><br />
+                    <div class="input-group input-groupe--style-1">
+                      <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control form-control-lg" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12">
+                  <div class="form-group">
+                      <%= f.label :password_confirmation, "Confirmer mot de passe" %><br />
+                    <div class="input-group input-groupe--style-1">
+                      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control form-control-lg" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="row align-items-center">
+                  <%= f.submit "Sauvegarder", class: "btn btn-styled btn-lg btn-block btn-base-1 mt-4"%>
+              </div>
+		
+
+              <% end %>
+
+            </form>
+          </div>
+          </div>
         </div>
-    </section>
-</div><!-- END: body-wrap -->
-
-
-
-
-
-
+      </div>
+    </div>
+  </div>
+</section>
