feat: anchor top about view

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -23,7 +23,7 @@
                             </li>
                             <% end %>
                             <li>
-                                <%= link_to "À propos", page_path('about') %>
+                                <%= link_to "À propos", page_path('about', anchor: "top") %>
                             </li>
                             <li>
                                 <%= mail_to "open-air@alabintheair.cc" do %>
