--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,9 +1,9 @@
-<section class="slice-lg sct-color-1">
+<section id="top" class="slice-lg sct-color-1">
     <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
                 <div class="section-title section-title--style-1 text-center mb-4">
-                    <h3 class="section-title-inner heading-2 strong-400">
+                    <h3 class="section-title-inner heading-2 strong-400 ">
                         <span>Open data</span>
                     </h3>
                     <span class="section-title-delimiter clearfix"></span>
