--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,36 +1,34 @@
 <section class="slice sct-color-1">
-    <div class="container">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title section-title--style-2 text-center mb-4">
+                    <h2 class="section-title-inner heading-2 strong-400">
+                    <span>
+                    <%=@topic.title%> </span>
+                    </h2>
+                </div>
+            </div>
+        </div>
         <div class="row">
             <div class="col-lg-9">
                 <div class="block block-post">
-                    <div class="section-title section-title--style-2 text-center mb-4">
-                        <h2 class="section-title-inner heading-2 strong-400">
-                            <span>
-                                <%=@topic.title%> </span>
-                        </h2>
-                    </div>
-
-
                     <div class="block-image">
                         <%= image_tag @topic.main_picture, class: "rounded" %>
                     </div>
-
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.short_description%>
                         </p>
                     </div>
-
                     <br><br>
-
-                    <div class="section-title section-title--style-1 text-center mb-4">
+                    <div id="driver_section" class="section-title section-title--style-1 text-center mb-4">
                         <h3 class="section-title-inner heading-3 strong-400">
-                            <span>
-                                <%=@topic.driver_section_title%> </span>
+                        <span>
+                        <%=@topic.driver_section_title%> </span>
                         </h3>
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
-
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.driver_section_intro%>
@@ -40,17 +38,14 @@
                     <div class="block-image">
                         <%= image_tag @topic.main_picture, class: "rounded" %>
                     </div>
-
                     <br><br>
-
-                    <div class="section-title section-title--style-1 text-center mb-4">
+                    <div id="pressure_section" class="section-title section-title--style-1 text-center mb-4">
                         <h3 class="section-title-inner heading-3 strong-400">
-                            <span>
-                                <%=@topic.pressure_section_title%> </span>
+                        <span>
+                        <%=@topic.pressure_section_title%> </span>
                         </h3>
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
-
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.pressure_section_intro%>
@@ -60,17 +55,14 @@
                     <div class="block-image">
                         <%= image_tag @topic.main_picture, class: "rounded" %>
                     </div>
-
                     <br><br>
-
-                    <div class="section-title section-title--style-1 text-center mb-4">
+                    <div id="state_section" class="section-title section-title--style-1 text-center mb-4">
                         <h3 class="section-title-inner heading-3 strong-400">
-                            <span>
-                                <%=@topic.state_section_title%> </span>
+                        <span>
+                        <%=@topic.state_section_title%> </span>
                         </h3>
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
-
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.state_section_intro%>
@@ -80,17 +72,14 @@
                     <div class="block-image">
                         <%= image_tag @topic.main_picture, class: "rounded" %>
                     </div>
-
                     <br><br>
-
-                    <div class="section-title section-title--style-1 text-center mb-4">
+                    <div id="impact_section" class="section-title section-title--style-1 text-center mb-4">
                         <h3 class="section-title-inner heading-3 strong-400">
-                            <span>
-                                <%=@topic.impact_section_title%> </span>
+                        <span>
+                        <%=@topic.impact_section_title%> </span>
                         </h3>
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
-
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.impact_section_intro%>
@@ -100,17 +89,14 @@
                     <div class="block-image">
                         <%= image_tag @topic.main_picture, class: "rounded" %>
                     </div>
-
                     <br><br>
-
-                    <div class="section-title section-title--style-1 text-center mb-4">
+                    <div id="response_section" class="section-title section-title--style-1 text-center mb-4">
                         <h3 class="section-title-inner heading-3 strong-400">
-                            <span>
-                                <%=@topic.response_section_title%> </span>
+                        <span>
+                        <%=@topic.response_section_title%> </span>
                         </h3>
                         <span class="section-title-delimiter clearfix"></span>
                     </div>
-
                     <div class="block-body block-post-body">
                         <p>
                             <%=@topic.response_section_intro%>
@@ -121,6 +107,47 @@
                         <%= image_tag @topic.main_picture, class: "rounded" %>
                     </div>
                     <br>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="sidebar--sticky" data-stick-in-parent="true" id="scroll_data_target">
+                    <ul class="categories categories--style-3">
+                        <li>
+                            <a href="#driver_section" data-scroll-to="#driver_section" data-scroll-to-offset="20">
+                                <span class="category-name">
+                                    <%= @topic.driver_section_title %>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#pressure_section" data-scroll-to="#pressure_section" data-scroll-to-offset="20">
+                                <span class="category-name">
+                                    <%= @topic.pressure_section_title %>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#state_section" data-scroll-to="#state_section" data-scroll-to-offset="20">
+                                <span class="category-name">
+                                    <%= @topic.state_section_title %>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#impact_section" data-scroll-to="#impact_section" data-scroll-to-offset="20">
+                                <span class="category-name">
+                                    <%= @topic.impact_section_title %>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#response_section" data-scroll-to="#response_section" data-scroll-to-offset="20">
+                                <span class="category-name">
+                                    <%= @topic.response_section_title %>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -143,8 +170,8 @@
             </div>
             <div class="card-body h-25">
                 <h3 class="heading heading-5 strong-600 mb-0">
-                    <a href="/topics/<%=topic.id%>">
-                        <%=topic.title%></a>
+                <a href="/topics/<%=topic.id%>">
+                <%=topic.title%></a>
                 </h3>
             </div>
             <div class="card-footer">
