--- a/app/views/topics/_dataset.html.erb
+++ b/app/views/topics/_dataset.html.erb
@@ -16,7 +16,7 @@
         <%= button_to "Source", dataset.db_link , class: "btn btn-styled btn-sm btn-green" %>
     </div>
     <% if (dataset.dpsir_category == "Driver" && dataset.rendered) %>
-    <iframe style="width:100%;" height="700" src="<%= dataset.db_link %>" frameBorder="0"></iframe>
+    <iframe class="w-100" height="700" src="<%= dataset.db_link %>" frameBorder="0"></iframe>
     <%end%>
 </div>
 <br>
